tests/baselines/reference/ComputedPropertyName10_es6.errors.txt
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName10_es6.ts(2,8): error TS1005: ';' expected.


==== tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName10_es6.ts (1 errors) ====
    class C {
       [e] = 1
           ~
!!! error TS1005: ';' expected.
    }